some modifications to loggings in ll-pipeline and complexity to effort research md file

--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,4 @@ docs/git-ignored-folder/
 /see-methods/02-enhanced-oss-see/07-test-sbert/sdee_lite_description_vectorized-large.sql
 see-methods/02-enhanced-oss-see/07-test-sbert/sdee_lite_description_vectorized.sql
 /llm-pipeline/generated-code/
+llm-pipeline/backend/generated-code/
