--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ __pycache__/
 # C extensions
 *.so
 
-docs/required-articles.md
+docs/git-ignored-folder/required-articles.md
 
 
 # Distribution / packaging
@@ -176,8 +176,14 @@ cython_debug/
 docs/git-ignored-folder/
 /docs/git-ignored-folder/lit-review-instructions.md
 /see-methods/02-enhanced-oss-see/0-artifacts/old/sdee_lite_description_vectorized-large.sql
-/see-methods/02-enhanced-oss-see/04-vectorizing-description-field/sdee_lite_description_vectorized.sql
+/see-methods/02-enhanced-oss-see/0-artifacts/sdee_lite_description_vectorized.sql
 /see-methods/02-enhanced-oss-see/07-test-sbert/sdee_lite_description_vectorized-large.sql
 see-methods/02-enhanced-oss-see/07-test-sbert/sdee_lite_description_vectorized.sql
 /llm-pipeline/generated-code/
 llm-pipeline/backend/generated-code/
+/see-methods/02-enhanced-oss-see/04-vectorizing-description-field/sdee_lite_description_vectorized.sql
+/see-methods/02-enhanced-oss-see/05-minimal-dataset/sdee_lite_description_vectorized.sql
+see-methods/02-enhanced-oss-see/05-minimal-dataset/sdee_lite_description_vectorized.sql
+see-methods/02-enhanced-oss-see/04-vectorizing-description-field/sdee_lite_description_cleaned.sql
+see-methods/02-enhanced-oss-see/04-vectorizing-description-field/sdee_lite_description_cleaned_old.sql
+see-methods/02-enhanced-oss-see/06-using-sbert-similarity-to-get-repositories/sdee_lite_description_vectorized.sql
