--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-.idea/
-# C extensions
+.idea/# C extensions
 *.so
 
 docs/git-ignored-folder/required-articles.md
@@ -168,7 +167,7 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
 
 # PyPI configuration file
 .pypirc
@@ -193,3 +192,5 @@ see-methods/02-enhanced-oss-see/06-using-sbert-similarity-to-get-repositories/sd
 see-methods/02-enhanced-oss-see/07-test-sbert/sdee_lite_description_vectorized.sql
 see-methods/02-enhanced-oss-see/07-test-sbert/sdee_lite_description_vectorized-large.sql
 see-methods/02-enhanced-oss-see/0-artifacts/old/sdee_lite_description_vectorized-large.sql
+/llm-pipeline/backend/sbert_complexity_estimator/DELETE_ME/
+llm-pipeline/backend/sbert_complexity_estimator/DELETE_ME/sbert_complexity_combined.py
