--- a/llm-pipeline/requirements.txt
+++ b/llm-pipeline/requirements.txt
@@ -8,36 +8,31 @@ asttokens==3.0.0
 async-lru==2.0.5
 attrs==23.2.0
 Babel==2.10.3
-bcc==0.29.1
+bcc==0.1.10
 bcrypt==3.2.2
 beautifulsoup4==4.13.3
 bleach==6.2.0
 blinker==1.9.0
-Brlapi==0.8.5
 Brotli==1.1.0
 certifi==2023.11.17
 cffi==1.17.1
 chardet==5.2.0
-cliapp==1.20180812.1
+cliapp==1.0.9
 click==8.1.6
-cloud-init==24.4.1
-cmdtest==0.32+git
+cmdtest==0.1.1
 colorama==0.4.6
 comm==0.2.2
-command-not-found==0.3
 configobj==5.0.8
 contourpy==1.3.1
 cryptography==41.0.7
 cssselect2==0.8.0
-cupshelpers==1.0
 cycler==0.12.1
-dbus-python==1.3.2
 debugpy==1.8.13
 decorator==5.2.1
-defer==1.0.6
+defer==1.0.4
 defusedxml==0.7.1
 distro==1.9.0
-distro-info==1.7+build1
+distro-info==1.0
 Django==5.1.7
 django-emoji==2.2.2
 duplicity==2.1.4
@@ -86,13 +81,12 @@ kiwisolver==1.4.8
 langchain-core==0.3.35
 langdetect==1.0.9
 langsmith==0.3.8
-language-selector==0.1
 launchpadlib==1.11.0
 lazr.restfulclient==0.14.6
 lazr.uri==1.0.6
 lizard==1.17.24
-louis==3.29.0
-Mako==1.3.2.dev0
+louis==1.3
+Mako==1.3.10
 mando==0.7.1
 Markdown==3.5.2
 markdown-it-py==3.0.0
@@ -152,7 +146,6 @@ pydantic_core==2.27.2
 PyDriller==2.7
 pydyf==0.11.0
 Pygments==2.17.2
-PyGObject==3.48.2
 PyJWT==2.7.0
 PyMuPDF==1.25.4
 PyNaCl==1.5.0
@@ -163,9 +156,7 @@ PyQt5==5.15.10
 PyQt5-sip==12.13.0
 pyrsistent==0.20.0
 pyserial==3.5
-python-apt==2.7.7+ubuntu4
 python-dateutil==2.9.0.post0
-python-debian==0.1.49+ubuntu2
 python-json-logger==3.3.0
 python-multipart==0.0.20
 pytimeparse2==1.7.1
@@ -198,7 +189,6 @@ sqlparse==0.5.3
 stack-data==0.6.3
 starlette==0.46.1
 sympy==1.13.1
-systemd-python==235
 tabulate==0.9.0
 tenacity==9.0.0
 terminado==0.18.1
@@ -212,19 +202,13 @@ tqdm==4.67.1
 traitlets==5.14.3
 transformers==4.49.0
 triton==3.2.0
-ttystatus==0.38
 types-python-dateutil==2.9.0.20241206
 types-pytz==2025.1.0.20250318
 typing_extensions==4.12.2
 tzdata==2025.1
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.2
-unattended-upgrades==0.1
 Unidecode==1.3.8
 uri-template==1.3.0
 urllib3==2.0.7
-usb-creator==0.3.16
 uvicorn==0.34.0
 wadllib==1.3.6
 wcwidth==0.2.13
@@ -235,9 +219,7 @@ websocket-client==1.8.0
 Werkzeug==3.1.3
 wheel==0.42.0
 wkhtmltopdf==0.2
-xdg==5
 xgboost==3.0.0
-xkit==0.0.0
 zombie-imp==0.0.2
 zopfli==0.2.3.post1
 zstandard==0.23.0
