--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@ __pycache__/
 .idea/# C extensions
 *.so
 
-docs/git-ignored-folder/required-articles.md
-
 
 # Distribution / packaging
 .Python
@@ -172,25 +170,10 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
-# Custom project-specific ignored files
-docs/git-ignored-folder/
-docs/git-ignored-folder/required-articles.md
-docs/git-ignored-folder/lit-review-instructions.md
 
 # Generated code
-llm-pipeline/generated-code/
-llm-pipeline/backend/generated-code/
+/generated-code/
+batch_output.log
 
-# SEE artifacts
-see-methods/02-enhanced-oss-see/0-artifacts/sdee_lite_description_vectorized-large.sql
-see-methods/02-enhanced-oss-see/0-artifacts/sdee_lite_description_vectorized.sql
-see-methods/02-enhanced-oss-see/04-vectorizing-description-field/sdee_lite_description_vectorized.sql
-see-methods/02-enhanced-oss-see/04-vectorizing-description-field/sdee_lite_description_cleaned.sql
-see-methods/02-enhanced-oss-see/04-vectorizing-description-field/sdee_lite_description_cleaned_old.sql
-see-methods/02-enhanced-oss-see/05-minimal-dataset/sdee_lite_description_vectorized.sql
-see-methods/02-enhanced-oss-see/06-using-sbert-similarity-to-get-repositories/sdee_lite_description_vectorized.sql
-see-methods/02-enhanced-oss-see/07-test-sbert/sdee_lite_description_vectorized.sql
-see-methods/02-enhanced-oss-see/07-test-sbert/sdee_lite_description_vectorized-large.sql
-see-methods/02-enhanced-oss-see/0-artifacts/old/sdee_lite_description_vectorized-large.sql
-/llm-pipeline/backend/sbert_complexity_estimator/DELETE_ME/
-llm-pipeline/backend/sbert_complexity_estimator/DELETE_ME/sbert_complexity_combined.py
+
+
